--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,12 @@
     <title>Mybrary</title>
 </head>
 <body>
-    Top
-    <br>
+
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
+
     <%- body %>
-    <br>
-    Bottom
+
+
 </body>
 </html>
